fix: adjust TOC position for improved visibility

--- a/_sass/custom/_toc.scss
+++ b/_sass/custom/_toc.scss
@@ -33,7 +33,7 @@ body.has-toc #page-content {
 
 body.has-toc .page-toc {
   position: sticky;
-  top: 66px;
+  top: 88px;
   height: fit-content;
   padding: 0 0 0 14px;
   border-left: 1px solid #2a2a2a;
